# Medicaid_Provider_Spending

./: .gitignore  AGENTS.md  README.md  build_datasets.sh  download.sh  enrich_with_rust.sh  upload_medicaid_to_hf.sh
build_datasets/: Cargo.toml
build_datasets/src/: args.rs  common.rs  constants.rs  enrich.rs  hcpcs.rs  main.rs  npi.rs  null_audit.rs  parquet_writer.rs  triage.rs  upload.rs
data/: README.md
data/manually_cleaned/: .gitkeep
data/manually_cleaned/PFREV26AR_nonQP/: PF26PAR_QP.md
data/manually_cleaned/PFREV26AR_nonQP/csv/: headers.csv  multiple_surgery_indicator.csv  opps_indicator.csv  pc-tc_indicator.csv  state_codes.csv  status_code.csv
data/manually_cleaned/PFREV26AR_nonQP/md/: headers.md  multiple_surgery_indicator.md  opps_indicator.md  pc-tc_indicator.md  status_code.md
data/manually_cleaned/rvu26ar_1/: RVU26AR.md
data_enricher/: Cargo.toml
data_enricher/src/: args.rs  common.rs  constants.rs  hcpcs.rs  main.rs  npi.rs  upload.rs
hf/: README.md  parquet_null_audit.md
site/: README.md
site/backend/: Cargo.toml
site/backend/src/: build.rs  cli.rs  download.rs  geo.rs  hcpcs.rs  main.rs  npi.rs  server.rs  storage.rs
site/backend/src/index/: hcpcs.rs  mod.rs  providers.rs
site/frontend/: .gitignore  package-lock.json  package.json  tailwind.config.cjs
site/frontend/src/: app.css
site/frontend/src/lib/: api.ts  format.ts
site/frontend/src/lib/components/: Nav.svelte
site/frontend/src/routes/: +layout.svelte  +page.svelte
site/frontend/src/routes/hcpcs/: +page.svelte
site/frontend/src/routes/map/: +page.svelte
(+3 files in other folders)
