[package]
name = "build_datasets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
csv = "1.4.0"
duckdb = { version = "1.4.4", features = ["bundled"] }
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.2", features = ["json", "gzip", "rustls", "query"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
